--- a/src/components/words/style.css
+++ b/src/components/words/style.css
@@ -1,12 +1,13 @@
-.content {
+#ok {
+  margin-top: 45vw;
     -webkit-box-shadow: 0 2px 9px 5px rgba(41, 41, 40, 1);
     -moz-box-shadow: 0 2px 9px 5px rgba(41, 41, 40, 1);
     box-shadow: 0 2px 9px 5px rgba(41, 41, 40, 1);
     pointer-events: none;
-    position: fixed;
+    position: sticky;
     bottom: 0;
     background: rgba(0, 0, 0, 0.5);
     color: #f1f1f1;
     width: 100%;
-    padding: 20px;
+    /* margin-bottom: 5vw; */
   }
